--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <ul class="list-inline text-center">
+                <ul class="print-hide list-inline text-center">
                     {% if site.RSS %}
                     <li>
                         <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
@@ -78,7 +78,7 @@
                     </li>
                     {% endif %}
                 </ul>
-                <p class="copyright text-muted">
+                <p class="print-hide copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
                     <a href="https://github.com/aiokr/aiokr.github.io">Wapiti</a>
