--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -23,7 +23,7 @@ layout: default
         {% if site.sidebar == false %}
 <!-- NO SIDEBAR -->
     <!-- PostList Container -->
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 postlist-container">
+            <div class="print-hide col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 postlist-container">
                 {{ content }}
             </div>
     <!-- Sidebar Container -->
@@ -64,7 +64,7 @@ layout: default
 
 <!-- USE SIDEBAR -->
     <!-- PostList Container -->
-    		<div class="
+    		<div class="print-hide 
                 col-lg-8 col-lg-offset-1
                 col-md-8 col-md-offset-1
                 col-sm-12
@@ -74,7 +74,7 @@ layout: default
     			{{ content }}
     		</div>
     <!-- Sidebar Container -->
-            <div class="
+            <div class="print-hide 
                 col-lg-3 col-lg-offset-0
                 col-md-3 col-md-offset-0
                 col-sm-12
@@ -187,7 +187,7 @@ layout: default
                 {% if site.friends %}
                 <hr>
                 <h5>FRIENDS</h5>
-                <ul class="list-inline">
+                <ul class="print-hide list-inline">
                     {% for friend in site.friends %}
                         <li><a href="{{friend.href}}">{{friend.title}}</a></li>
                     {% endfor %}
