--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -64,7 +64,7 @@ layout: default
 
 <!-- USE SIDEBAR -->
     <!-- PostList Container -->
-    		<div class="print-hide 
+    		<div class="
                 col-lg-8 col-lg-offset-1
                 col-md-8 col-md-offset-1
                 col-sm-12
