--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -116,8 +116,9 @@ layout: default
 
                 <!-- Featured Tags -->
                 {% if site.featured-tags %}
+                <div class="print-hide">
                 <section>
-                    <hr class="print-hide hidden-sm hidden-xs">
+                    <hr class="hidden-sm hidden-xs">
                     <h5><a href="/tags/">FEATURED TAGS</a></h5>
                     <div class="tags">
         				{% for tag in site.tags %}
@@ -129,17 +130,20 @@ layout: default
         				{% endfor %}
         			</div>
                 </section>
+                </div>
                 {% endif %}
 
                 <!-- Friends Blog -->
                 {% if site.friends %}
                 <hr>
+                <div class="print-hide">
                 <h5>FRIENDS</h5>
-                <ul class="print-hide list-inline">
+                <ul class="list-inline">
                     {% for friend in site.friends %}
                         <li><a href="{{friend.href}}">{{friend.title}}</a></li>
                     {% endfor %}
                 </ul>
+                </div>
                 {% endif %}
             </div>
         </div>
