--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,7 +62,7 @@ layout: default
 
                 <hr style="visibility: hidden;">
 
-                <ul class="pager">
+                <ul class="print-hide pager">
                     {% if page.previous.url %}
                     <li class="previous">
                         <a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">
@@ -72,7 +72,7 @@ layout: default
                     </li>
                     {% endif %}
                     {% if page.next.url %}
-                    <li class="next">
+                    <li class="print-hide next">
                         <a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">
                         Next<br>
                         <span>{{page.next.title}}</span>
