--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -1,11 +1,17 @@
----
-title: Tags
-layout: page
-description: a cloud of tags
-header-img: "img/index.jpg"
----
-
-<!-- -->
+<!-- Page Header -->
+<header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 ">
+                <div class="site-heading">
+                    <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>
+                    <!--<hr class="small">-->
+                    <span class="subheading">{{ page.description }}</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 
 
 <!-- Main Content -->
@@ -18,6 +24,13 @@ header-img: "img/index.jpg"
 				<a href="#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}</a>
 				{% endfor %}
 			</div>
+
+            <!--<blockquote class="tag-comments">
+                标签命名规范：
+                    <li>行业观察、职位、公司优先使用中文</li>
+                    <li>外国产品、术语优先使用英文</li>
+					<li>其他文字按情况翻译成中文或英文</li>
+            </blockquote>-->
 
             <!-- 标签列表 -->
 			{% for tag in site.tags %}
