--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -97,7 +97,7 @@
 <script src="{{ "/js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="{{ "/js/js.min.js " | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/js.js " | prepend: site.baseurl }}"></script>
 
 <!-- Service Worker -->
 {% if site.service-worker %}
