--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -81,7 +81,7 @@
                 <p class="print-hide copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    <a href="https://github.com/aiokr/aiokr.github.io">Wapiti</a>
+                    <a href="https://github.com/aiokr/jekyll-theme-wapiti">Wapiti</a>
                     <br>
                     Theme by <a href="https://www.aiokr.space">aiokr</a> | Power by <a href="https://jekyllrb.com/">Jekyll</a>
                 </p>
